--- a/SplitProcess_Slave/SplitProcess_Slave.vcxproj
+++ b/SplitProcess_Slave/SplitProcess_Slave.vcxproj
@@ -70,21 +70,25 @@
     <LinkIncremental>true</LinkIncremental>
     <TargetName>MP_Pipeline.dll.slave</TargetName>
     <LibraryPath>$(SolutionDir)lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <TargetName>MP_Pipeline.dll.slave</TargetName>
     <LibraryPath>$(SolutionDir)lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>MP_Pipeline.dll.slave</TargetName>
     <LibraryPath>$(SolutionDir)lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>MP_Pipeline.dll.slave</TargetName>
     <LibraryPath>$(SolutionDir)lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -102,7 +106,7 @@
       <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
-      <Command>copy /y "$(TargetPath)" "$(SolutionDir)x64\$(Configuration)\MP_Pipeline.dll.win32.slave.exe"</Command>
+      <Command>copy /y "$(TargetPath)" "$(SolutionDir)x64\$(Configuration)\MP_Pipeline.dll.win32.slave.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -121,7 +125,7 @@
       <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
-      <Command>copy /y "$(TargetPath)" "$(SolutionDir)$(Configuration)\MP_Pipeline.dll.win64.slave.exe"</Command>
+      <Command>copy /y "$(TargetPath)" "$(SolutionDir)Win32\$(Configuration)\MP_Pipeline.dll.win64.slave.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -144,7 +148,7 @@
       <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
-      <Command>copy /y "$(TargetPath)" "$(SolutionDir)x64\$(Configuration)\MP_Pipeline.dll.win32.slave.exe"</Command>
+      <Command>copy /y "$(TargetPath)" "$(SolutionDir)x64\$(Configuration)\MP_Pipeline.dll.win32.slave.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -167,7 +171,7 @@
       <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <PostBuildEvent>
-      <Command>copy /y "$(TargetPath)" "$(SolutionDir)$(Configuration)\MP_Pipeline.dll.win64.slave.exe"</Command>
+      <Command>copy /y "$(TargetPath)" "$(SolutionDir)Win32\$(Configuration)\MP_Pipeline.dll.win64.slave.exe</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
